# podcaist

./: .gitignore  CLAUDE.md  README.md  blind_testing.py  pyproject.toml
podcaist/: ablation_studies.py  contributions.py  deep_dive.py  end_to_end.py  gemini_request.py  generate_audio.py  generate_gemini_audio.py  generate_podcast_script.py  generate_sections.py  generate_with_dia.py  generate_with_eleven_labs.py  generate_with_inworld.py  generate_with_kokoro.py  limitations.py  main.py  method.py  modal_utils.py  model_garden.py  openai_request.py  pdf_utils.py  progress.py  results.py  utils.py  view.ipynb
podcaist/blind_test_results/: test_001.txt  test_002.txt  test_metadata.csv
podcaist/blind_test_results2/: test_001.txt  test_002.txt  test_metadata.csv
podcaist/blind_test_results3/: test_001.txt  test_metadata.csv
podcaist/blind_test_results4/: test_001.txt  test_002.txt  test_003.txt  test_005.txt  test_006.txt  test_007.txt  test_008.txt  test_metadata.csv
